--- a/src/components/sections/SkillSlider.astro
+++ b/src/components/sections/SkillSlider.astro
@@ -51,17 +51,17 @@ import Node from "@/icons/Node.astro";
     </p>
   </article>
 
-  <div class="stock-ticker">
+  <div class="stock-ticker shadow-[inset_-12px_-8px_40px_#46464620]">
     <ul>
       <li class="minus">
         <Html5 class="w-4 h-4" />
-        <span class="skill">HTML</span>
+        <span class="company">HTML</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Css3 class="w-4 h-4" />
         <span class="company">CSS</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Javascript class="w-4 h-4" />
         <span class="company">Javascript</span>
       </li>
@@ -69,7 +69,7 @@ import Node from "@/icons/Node.astro";
         <Python class="w-4 h-4" />
         <span class="company">Python</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <React class="w-4 h-4" />
         <span class="company">React</span>
       </li>
@@ -77,13 +77,86 @@ import Node from "@/icons/Node.astro";
         <Astrojs class="w-4 h-4" />
         <span class="company">Astro</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Nextdotjs class="w-4 h-4" />
         <span class="company">Next.js</span>
       </li>
       <li class="minus">
         <Nodedotjs class="w-4 h-4" />
         <span class="company">Node.js</span>
+      </li>
+      <li class="minus">
+        <Tailwindcss class="w-4 h-4" />
+        <span class="company">Tailwind</span>
+      </li>
+      <li class="minus">
+        <Typescript class="w-4 h-4" />
+        <span class="company">Typescript</span>
+      </li>
+      <li class="minus">
+        <Mysql class="w-4 h-4" />
+        <span class="company">MySql</span>
+      </li>
+      <li class="minus">
+        <Git class="w-4 h-4" />
+        <span class="company">Git</span>
+      </li>
+      <li class="minus">
+        <Github class="w-4 h-4" />
+        <span class="company">Github</span>
+      </li>
+      <li class="minus">
+        <Bootstrap class="w-4 h-4" />
+        <span class="company">Bootstrap</span>
+      </li>
+      <li class="minus">
+        <Vite class="w-4 h-4" />
+        <span class="company">Vite</span>
+      </li>
+      <li class="minus">
+        <Slack class="w-4 h-4" />
+        <span class="company">Slack</span>
+      </li>
+
+      <li class="plus">
+        <Figma class="w-4 h-4" />
+        <span class="company">Figma</span>
+      </li>
+      <li class="plus">
+        <Notion class="w-4 h-4" />
+        <span class="company">Notion</span>
+      </li>
+      <li class="plus">
+        <Hubspot class="w-4 h-4" />
+        <span class="company">Hubspot</span>
+      </li>
+      <li class="plus">
+        <Gumroad class="w-4 h-4" />
+        <span class="company">Gumroad</span>
+      </li>
+      <li class="plus">
+        <Googleads class="w-4 h-4" />
+        <span class="company">Google Ads</span>
+      </li>
+      <li class="plus">
+        <Googleanalytics class="w-4 h-4" />
+        <span class="company">Analytics</span>
+      </li>
+      <li class="plus">
+        <Meta class="w-4 h-4" />
+        <span class="company">Meta</span>
+      </li>
+      <li class="plus">
+        <Googlegemini class="w-4 h-4" />
+        <span class="company">Gemini</span>
+      </li>
+      <li class="plus">
+        <Openai class="w-4 h-4" />
+        <span class="company">ChatGPT</span>
+      </li>
+      <li class="plus">
+        <Blogger class="w-4 h-4" />
+        <span class="company">Blogger</span>
       </li>
     </ul>
 
@@ -92,11 +165,11 @@ import Node from "@/icons/Node.astro";
         <Html5 class="w-4 h-4" />
         <span class="company">HTML</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Css3 class="w-4 h-4" />
         <span class="company">CSS</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Javascript class="w-4 h-4" />
         <span class="company">Javascript</span>
       </li>
@@ -104,7 +177,7 @@ import Node from "@/icons/Node.astro";
         <Python class="w-4 h-4" />
         <span class="company">Python</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <React class="w-4 h-4" />
         <span class="company">React</span>
       </li>
@@ -112,13 +185,85 @@ import Node from "@/icons/Node.astro";
         <Astrojs class="w-4 h-4" />
         <span class="company">Astro</span>
       </li>
-      <li class="plus">
+      <li class="minus">
         <Nextdotjs class="w-4 h-4" />
         <span class="company">Next.js</span>
       </li>
       <li class="minus">
         <Nodedotjs class="w-4 h-4" />
         <span class="company">Node.js</span>
+      </li>
+      <li class="minus">
+        <Tailwindcss class="w-4 h-4" />
+        <span class="company">Tailwind</span>
+      </li>
+      <li class="minus">
+        <Typescript class="w-4 h-4" />
+        <span class="company">Typescript</span>
+      </li>
+      <li class="minus">
+        <Mysql class="w-4 h-4" />
+        <span class="company">MySql</span>
+      </li>
+      <li class="minus">
+        <Git class="w-4 h-4" />
+        <span class="company">Git</span>
+      </li>
+      <li class="minus">
+        <Github class="w-4 h-4" />
+        <span class="company">Github</span>
+      </li>
+      <li class="minus">
+        <Bootstrap class="w-4 h-4" />
+        <span class="company">Bootstrap</span>
+      </li>
+      <li class="minus">
+        <Vite class="w-4 h-4" />
+        <span class="company">Vite</span>
+      </li>
+      <li class="minus">
+        <Slack class="w-4 h-4" />
+        <span class="company">Slack</span>
+      </li>
+      <li class="plus">
+        <Figma class="w-4 h-4" />
+        <span class="company">Figma</span>
+      </li>
+      <li class="plus">
+        <Notion class="w-4 h-4" />
+        <span class="company">Notion</span>
+      </li>
+      <li class="plus">
+        <Hubspot class="w-4 h-4" />
+        <span class="company">Hubspot</span>
+      </li>
+      <li class="plus">
+        <Gumroad class="w-4 h-4" />
+        <span class="company">Gumroad</span>
+      </li>
+      <li class="plus">
+        <Googleads class="w-4 h-4" />
+        <span class="company">Google Ads</span>
+      </li>
+      <li class="plus">
+        <Googleanalytics class="w-4 h-4" />
+        <span class="company">Analytics</span>
+      </li>
+      <li class="plus">
+        <Meta class="w-4 h-4" />
+        <span class="company">Meta</span>
+      </li>
+      <li class="plus">
+        <Googlegemini class="w-4 h-4" />
+        <span class="company">Gemini</span>
+      </li>
+      <li class="plus">
+        <Openai class="w-4 h-4" />
+        <span class="company">ChatGPT</span>
+      </li>
+      <li class="plus">
+        <Blogger class="w-4 h-4" />
+        <span class="company">Blogger</span>
       </li>
     </ul>
   </div>
@@ -134,6 +279,12 @@ import Node from "@/icons/Node.astro";
     border-block: 1px solid rgb(var(--dark), 0.1);
     overflow: hidden;
     user-select: none;
+    mask-image: linear-gradient(
+      to right,
+      transparent,
+      #000 10% 90%,
+      transparent
+    );
 
     --gap: 20px;
     display: flex;
@@ -153,7 +304,7 @@ import Node from "@/icons/Node.astro";
   }
 
   .stock-ticker:hover ul {
-    animation-play-state: paused;    
+    animation-play-state: paused;
   }
 
   @keyframes scroll {
@@ -194,13 +345,13 @@ import Node from "@/icons/Node.astro";
     content: "↓";
   } */
 
-  .stock-ticker .plus .change,
+  .stock-ticker .plus,
   .stock-ticker .plus::before {
-    color: #089981;
+    color: rgb(var(--bg-200));
   }
 
-  .stock-ticker .minus .change,
+  .stock-ticker .minus,
   .stock-ticker .minus::before {
-    color: #f23645;
+    color: rgb(var(--accent-100));
   }
 </style>
