--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from "@/components/sections/About.astro";
 import Skills from "@/components/sections/Skills.astro";
 import SkillSlider from "@/components/sections/SkillSlider.astro";
 import BlogPost from "@/components/sections/BlogPost.astro";
+import PostMedia from "@/components/sections/PostMedia.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Footer from "@/components/sections/Footer.astro";
 
@@ -17,8 +18,10 @@ const { name, label } = basics;
   <Navbar />
   <Hero />  
   <About />
+  <!-- <Skills /> -->
   <SkillSlider />  
   <Projects />
   <BlogPost />
+  <PostMedia />
   <Footer />
 </Layout>
