--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -80,7 +80,7 @@ const SOCIAL_ICONS: Record<string, any> = {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 0.1em;
-    color: rgb(30, 37, 44, 0.65);
+    color: rgb(var(--text-100), 0.45);
   }
 
   .social-icons {
@@ -92,11 +92,11 @@ const SOCIAL_ICONS: Record<string, any> = {
     transition-property: transform, color;
     transition-duration: 0.3s, 0.5s;
     transition-delay: 0s, 0.1s;
-    color: rgb(30, 37, 44, 0.65);
+    color: rgb(var(--dark), 0.65);
   }
   .social-icons a:hover {
     transform: scale(1.2) rotate(360deg);
-    color: rgb(30, 37, 44, 1);
+    color: rgb(var(--text-200), 1);
   }
 
   @media (width <= 700px) {
@@ -104,7 +104,7 @@ const SOCIAL_ICONS: Record<string, any> = {
       margin-bottom: 38px;
       padding: 0rem;
     }
-    
+
     .avatar {
       flex-direction: column;
       text-align: center;
