--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -118,20 +118,24 @@ const printInfo = [
 </Section>
 
 <style>
-  .hero-info .text-title-hero {    
-    text-shadow: 0px 0px 8px rgb(var(--dark), 0.25);
-    background: #1e252c;
+  .hero-info h1,
+  .hero-info h2 {
+    color: rgb(var(--text-100));
+  }
+  .hero-info .text-title-hero {
+    text-shadow: 0px 0px 16px rgb(var(--text-200), 0.25);
+    background: rgb(var(--text-200));
     background: linear-gradient(
       to left,
-      rgb(var(--dark), 0.95) 0%,
-      rgb(var(--dark), 0.45) 50%,
-      rgb(var(--dark), 0.95) 100%
+      rgb(var(--text-200), 0.98) 0%,
+      rgb(var(--text-200), 0.55) 50%,
+      rgb(var(--text-200), 0.98) 100%
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   .hero-info span {
-    color: rgb(30, 37, 44, 0.45);
+    color: rgb(var(--text-200), 0.4);
   }
 
   .hero-image img {
@@ -142,18 +146,18 @@ const printInfo = [
 
   footer {
     display: flex;
-    gap: 8px;
-    font-size: 10px;
+    gap: 0.5rem;
+    font-size: 0.625rem;
   }
 
   footer a {
-    color: rgb(30, 37, 44, 0.55);
+    color: rgb(var(--dark), 0.5);
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(30, 37, 44, 0.08);
-    border-radius: 6px;
-    padding: 4px;
+    border: 1px solid rgb(var(--text-200), 0.1);
+    border-radius: 0.375rem;
+    padding: 0.25rem;
     height: 32px;
     width: 32px;
 
@@ -161,9 +165,9 @@ const printInfo = [
   }
 
   footer a:hover {
-    background-color: rgb(30, 37, 44, 0.08);
-    border: 1px solid rgb(30, 37, 44, 0.08);
-    color: rgb(30, 37, 44, 1);
+    background-color: rgb(var(--text-200), 0.05);
+    border: 1px solid rgb(var(--text-200), 0.05);
+    color: rgb(var(--text-200), 1);
   }
 
   @media (width <= 700px) {
