--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -100,20 +100,24 @@ const SKILL_ICONS: Record<string, any> = {
   .projects-items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 0.5rem;    
+    gap: 0.5rem;
     border-radius: 0.5rem;
     padding: 0px 8px;
   }
   .items {
-    overflow: hidden;    
-    border: 1px solid rgb(30, 37, 44, 0.08);
+    overflow: hidden;
+    border: 1px solid rgb(var(--text-200), 0.1);
     border-radius: 0.5rem;
     padding: 8px;
     transition: all 0.3s ease-in-out;
     position: relative;
   }
   .items:hover {
-    background-color: rgb(30, 37, 44, 0.08);
+    background-color: rgb(var(--text-200), 0.05);
+    border: 1px solid rgb(var(--black), 0.1);
+    box-shadow:
+      4px 4px 16px rgb(var(--text-200), 0.1),
+      -4px -4px 16px rgb(var(--text-200), 0.1);
   }
   .item {
     display: flex;
