--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -6,19 +6,19 @@ import { Github, X, Instagram, Threads, Linkedin } from "simple-icons-astro";
 ---
 
 <Section>
-  <header class="text-gray-600 body-font" transition:animate="slide">
+  <header class="" transition:animate="slide">
     <div
-      class="container mx-auto flex flex-row items-center justify-between pt-4"
+      class="container mx-auto pt-4 flex items-center flex-row justify-between "
     >
       <h2
-        class="flex title-font font-medium items-center mb-4 md:mb-0 text-[rgba(var(--text-100),.85)] hover:text-[rgba(var(--text-200),.90)] hover:drop-shadow-lg"
+        class="flex title-font font-medium items-center mb-0 md:mb-0 text-[rgba(var(--text-100),.85)] hover:text-[rgba(var(--text-200),.90)] hover:drop-shadow-lg"
       >
         <Logo />
         <span class="ml-1 text-2xl font-bold tracking-tighter">Edinson.</span>
       </h2>
 
       <div
-        class="social-links inline-flex items-center gap-2 border-0 py-1 px-3 focus:outline-none mt-4 md:mt-0"
+        class="social-links inline-flex items-center gap-2 border-0  focus:outline-none mt-0 md:mt-0"
       >
         <a
           href="https://www.linkedin.com/in/edinson-rivera-jurado/"
